--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -25,9 +25,9 @@
 
     <fragment
         android:id="@+id/nav_locate"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:name="com.hache.appentrepatas.ui.locate.MapsFragment"
         android:label="@string/menu_slideshow"
-        tools:layout="@layout/activity_maps" />
+        tools:layout="@layout/fragment_maps" />
 
     <fragment
         android:id="@+id/nav_callup"
